# src/db/services/type.ts
@@ -1,0 +1,17 @@
+import { CalculateExecutionTime } from 'helpers';
+
+export type TDatabaseLogger = {
+  sqlLog: CalculateExecutionTime[];
+};
+
+export type TCalcPage = {
+  totalElementsFromDB: number;
+  maxPage: number;
+};
+
+export type TSearchRepositoryResponse<N extends string, D> = TCalcPage &
+  TDatabaseLogger & {
+    tableName: N;
+    searchColumnName: string;
+    data: D[];
+  };
